added templates tags

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -17,22 +17,21 @@
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><a href="#">Lorikeet</a></h1>
+			<h1><a href="#">GCET</a></h1>
 		</div>
 		<div id="menu">
 			<ul>
 				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
 				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
 				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
 	</div>
 	<div id="banner" class="container">
 		<div class="title">
-			<h2>Consectetuer adipiscing elit</h2>
-			<span class="byline">Donec pulvinar ullamcorper metus</span>
+			<h2>Jumping Protein</h2>
+			<span class="byline">A division of the Glorified Community Empowerment Trust</span>
 		</div>
 		<ul class="actions">
 			<li><a href="#" class="button">Etiam posuere</a></li>
@@ -43,7 +42,7 @@
 <div id="wrapper">
 	<div id="three-column" class="container">
     	<div class="banner">
-	        <img src="{% static 'images/pic01.jpg' %}" alt="" />
+	        <img src="{% static '/webapp/images/pic01.jpg' %}" alt="Image not available" />
         </div>
 		<div class="title">
 			<h2>Feugiat lorem ipsum dolor sed veroeros</h2>
