added get_absolute_url in order to locate blogs. Added blog.css. This will be changed later to match style, but things are working great. urls are working.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -22,7 +22,7 @@
 		<div id="menu">
 			<ul>
 				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Blog</a></li>
+				<li><a href="{% url 'blog:post_list' %}" accesskey="2" title="">Blog</a></li>
 				<li><a href="#" accesskey="3" title="">About Us</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
