--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 <div id="content">
-{% block content%}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 </div>
 <div id="sidebar">
     <h2>Our Blog</h2>
+    <p><a href="{% url "blog:post_feed" %}" title="Subscribe to my RSS feed">RSS feed</a></p>
     <p>Here we detail events and activities surrounding our organization.</p>
 </div>
 </body>
