Added post list and post detail. Also added a latest post detail and the ability to see how may blogs have been posted so far.

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-
-{% block title %}{{ post.title }}{% endblock %}
+{% load custom_blog_tags %}
+{% block title %}{{ post.title|safe }}{% endblock %}
 
 {% block content %}
- <h1>{{ post.title }}</h1>
+ <h1>{{ post.title|safe }}</h1>
  <p class="date">
-   Published {{ post.publish }} by {{ post.author }}
+   Published {{ post.publish }} by {{ post.author }} | {{ post.body|read_time }}
  </p>
- {{ post.body|linebreaks }}
+ {{ post.body|safe|linebreaks }}
 {% endblock %}
