--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,13 +5,13 @@
 {% for post in posts %}
 <h2>
     <a href="{{ post.get_absolute_url }}">
-        {{ post.title }}
+        {{ post.title|safe }}
     </a>
 </h2>
 <p class="date">
     Published {{ post.publish }} by {{ post.author }}
 </p>
-{{ post.body|truncatewords:30|linebreaks }}
+{{ post.body|safe|truncatewords:30|linebreaks }}
 {% endfor %}
     {% include "blog/pagination.html" with page=posts %}
 {% endblock %}
