Minor css changes

--- a/static/blog/css/blog.css
+++ b/static/blog/css/blog.css
@@ -35,7 +35,7 @@ h2 {
 }
 
 p.date {
-   color:#ccc;
+   color: #414741;
    font-family: georgia, serif;
    font-size: 12px;
    font-style: italic;
