--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,4 +1,6 @@
+{% load custom_blog_tags %}
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +15,9 @@
 </div>
 <div id="sidebar">
     <h2>Our Blog</h2>
+    <p>The latest {% total_posts %} posts published so far in this blog.</p>
+    <h3>Latest Posts</h3>
+    {% render_latest_posts 2 %}
     <p><a href="{% url "blog:post_feed" %}" title="Subscribe to my RSS feed">RSS feed</a></p>
     <p>Here we detail events and activities surrounding our organization.</p>
 </div>
