--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -1,20 +1,30 @@
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
+html, body, div, span,
+applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
+blockquote, pre, a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong,
+sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article,
+aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav,
+output, ruby, section, summary, time, mark, audio, video {
+    max-width: 100%;
     padding: 0;
-    overflow-x: hidden;
-
+    margin: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
+    overflow: auto;
 }
 
 body {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     background: #111111;
     font-family: 'Didact Gothic', sans-serif;
     font-size: 12pt;
     font-weight: 200;
     color: #FFF;
+
+
 }
 
 
@@ -48,7 +58,7 @@ a:hover {
 }
 
 .container {
-    overflow: hidden;
+    overflow: auto;
     margin: 0em auto;
     width: 1200px;
 }
@@ -64,6 +74,7 @@ a:hover {
 .image img {
     display: block;
     width: 100%;
+    flex-flow: row;
 }
 
 .image-full {
@@ -270,6 +281,7 @@ ul.contact li a.icon-rss:before {
     position: relative;
     padding: 5em 0em 7em 0em;
     background: #FFF;
+
 }
 
 /*********************************************************************************/
@@ -319,6 +331,7 @@ ul.contact li a.icon-rss:before {
     position: absolute;
     top: 4.5em;
     right: 0;
+
 }
 
 #menu ul {
@@ -416,7 +429,7 @@ ul.contact li a.icon-rss:before {
 /*********************************************************************************/
 
 #copyright {
-    overflow: hidden;
+    overflow: auto;
     padding: 5em 0em;
     border-top: 1px solid rgba(0, 0, 0, 0.08);
 }
@@ -481,3 +494,28 @@ ul.contact li a.icon-rss:before {
     text-align: center;
     color: rgba(0, 0, 0, .5);
 }
+
+
+/* Tablet Landscape */
+@media screen and (max-width: 1060px) {
+    body {
+        width: 100%;
+    }
+
+    body {
+        width: 100%;
+        margin-left: 3%;
+    }
+}
+
+/* Tabled Portrait */
+@media screen and (max-width: 768px) {
+    body {
+        width: 100%;
+    }
+
+    body {
+        width: 100%;
+        margin: 0;
+        border: none;
+    }
