--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,81 +1,98 @@
 {% load static %}
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Jumping Protein</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet" />
-<link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
-<link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all" />
 
-<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>Jumping Protein</title>
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
+    <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
+    <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
+    <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0>
+    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+
+    <!--[if IE 6]>
+    <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->
 
 </head>
 <body>
 <div id="header-wrapper">
-	<div id="header" class="container">
-		<div id="logo">
-			<h1><a href="#">GCET</a></h1>
-		</div>
-		<div id="menu">
-			<ul>
-				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="{% url 'blog:post_list' %}" accesskey="2" title="">Blog</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
-			</ul>
-		</div>
-	</div>
-	<div id="banner" class="container">
-		<div class="title">
-			<h2>Jumping Protein</h2>
-			<span class="byline">A division of the Glorified Community Empowerment Trust</span>
-		</div>
-		<ul class="actions">
-			<li><a href="#" class="button">Etiam posuere</a></li>
-			<li><a href="#" class="button">Pulvinar mollis</a></li>
-		</ul>
-	</div>
+    <div id="header" class="container">
+        <div id="logo">
+            <h1><a href="#">GCET</a></h1>
+        </div>
+        <div id="menu">
+            <ul>
+                <li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
+                <li><a href="{% url 'blog:post_list' %}" accesskey="2" title="">Blog</a></li>
+                <li><a href="#" title="">About Us</a></li>
+                <li><a href="#"  title="">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+    <div id="banner" class="container">
+        <div class="title">
+            <h2>Jumping Protein</h2>
+            <span class="byline">A division of the Glorified Community Empowerment Trust</span>
+        </div>
+        <ul class="actions">
+            <li><a href="#" class="button">Etiam posuere</a></li>
+            <li><a href="#" class="button">Pulvinar mollis</a></li>
+        </ul>
+    </div>
 </div>
 <div id="wrapper">
-	<div id="three-column" class="container">
-    	<div class="banner">
-	        <img src="{% static '/webapp/images/pic01.jpg' %}" alt="Image not available" />
+    <div id="three-column" class="container">
+        <div class="banner">
+            <img src="{% static '/webapp/images/woman-pinkshirt-foreground.jpg' %}" alt="Image not available"/>
+
         </div>
-		<div class="title">
-			<h2>Feugiat lorem ipsum dolor sed veroeros</h2>
-			<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
-		</div>
-		<div class="boxA">
-			<p>Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad  torquent per conubia nostra.</p>
-			<a href="#" class="button button-alt">More Info</a>
-		</div>
-		<div class="boxB">
-			<p>Etiam neque. Vivamus consequat lorem at nisl. Nullam  wisi a sem semper eleifend. Donec mattis. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.</p>
-			<a href="#" class="button button-alt">More Info</a>
-		</div>
-		<div class="boxC">
-			<p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.</p>
-			<a href="#" class="button button-alt">More Info</a>
-		</div>
-	</div>
+        <div class="title">
+            <h2>Feugiat lorem ipsum dolor sed veroeros</h2>
+            <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+        </div>
+        <div class="boxA">
+            <p>Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
+                nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia
+                nostra.</p>
+            <a href="#" class="button button-alt">More Info</a>
+        </div>
+        <div class="boxB">
+            <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis. Phasellus
+                pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.</p>
+            <a href="#" class="button button-alt">More Info</a>
+        </div>
+        <div class="boxC">
+            <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
+                Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
+                nunc.</p>
+            <a href="#" class="button button-alt">More Info</a>
+        </div>
+    </div>
 </div>
 <div id="welcome">
-	<div class="container">
-		<div class="title">
-			<h2>Fusce ultrices fringilla metus</h2>
-			<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
-		</div>
-		<p>This is <strong>Lorikeet</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-		<ul class="actions">
-			<li><a href="#" class="button">Etiam posuere</a></li>
-		</ul>
-	</div>
+    <div class="container">
+        <div class="title">
+            <h2>Fusce ultrices fringilla metus</h2>
+            <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+        </div>
+        <p>This is <strong>Lorikeet</strong>, a free, fully standards-compliant CSS template designed by <a
+                href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a
+                href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a
+                href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free
+            to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)
+        </p>
+        <ul class="actions">
+            <li><a href="#" class="button">Etiam posuere</a></li>
+        </ul>
+    </div>
 </div>
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    <p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a
+            href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
 </body>
 </html>
