--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -238,6 +238,7 @@ ul.contact li a.icon-rss:before {
     float: right;
 }
 
+
 /*********************************************************************************/
 /* 2-column                                                                      */
 /*********************************************************************************/
@@ -459,8 +460,8 @@ ul.contact li a.icon-rss:before {
 }
 
 #welcome .container {
-    width: 1000px;
-    padding: 0px 100px;
+    width: auto;
+    padding: 0 100px;
     color: rgba(255, 255, 255, 0.8);
 }
 
