--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -47,7 +47,8 @@
 <div id="wrapper">
     <div id="three-column" class="container">
         <div class="banner">
-            <img src="{% static '/webapp/images/woman-pinkshirt-foreground.jpg' %}" alt="Image not available"/>
+            <img class src="{% static '/webapp/images/woman-pinkshirt-foreground.jpg' %}" alt="Image not available"/>
+
 
         </div>
         <div class="title">
