--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0>
-    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
+    <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
 
     <!--[if IE 6]>
@@ -29,7 +29,7 @@
                 <li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
                 <li><a href="{% url 'blog:post_list' %}" accesskey="2" title="">Blog</a></li>
                 <li><a href="#" title="">About Us</a></li>
-                <li><a href="#"  title="">Contact Us</a></li>
+                <li><a href="#" title="">Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -52,25 +52,31 @@
 
         </div>
         <div class="title">
-            <h2>Feugiat lorem ipsum dolor sed veroeros</h2>
-            <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+            <h2>Our Mission</h2>
+            <span class="byline">To economically empower the African marginalised society through creativity, innovation and enterprise.</span>
         </div>
-        <div class="boxA">
-            <p>Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
-                nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia
-                nostra.</p>
-            <a href="#" class="button button-alt">More Info</a>
-        </div>
-        <div class="boxB">
-            <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis. Phasellus
-                pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.</p>
-            <a href="#" class="button button-alt">More Info</a>
-        </div>
-        <div class="boxC">
-            <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
-                Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
-                nunc.</p>
-            <a href="#" class="button button-alt">More Info</a>
+        <div class="boxcontainer">
+            <div class="boxA">
+                <p>Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
+                    quis
+                    nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia
+                    nostra.</p>
+                <a href="#" class="button button-alt">More Info</a>
+            </div>
+            <div class="boxB">
+                <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis.
+                    Phasellus
+                    pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
+                    nunc.</p>
+                <a href="#" class="button button-alt">More Info</a>
+            </div>
+            <div class="boxC">
+                <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
+                    Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
+                    quis
+                    nunc.</p>
+                <a href="#" class="button button-alt">More Info</a>
+            </div>
         </div>
     </div>
 </div>
