--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -55,22 +55,22 @@
             <h2>Our Mission</h2>
             <span class="byline">To economically empower the African marginalised society through creativity, innovation and enterprise.</span>
         </div>
-        <div class="boxcontainer">
-            <div class="boxA">
+        <div class="flexbox">
+            <div class="flex-column">
                 <p>Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
                     quis
                     nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia
                     nostra.</p>
                 <a href="#" class="button button-alt">More Info</a>
             </div>
-            <div class="boxB">
+            <div class="flex-column">
                 <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis.
                     Phasellus
                     pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
                     nunc.</p>
                 <a href="#" class="button button-alt">More Info</a>
             </div>
-            <div class="boxC">
+            <div class="flex-column">
                 <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
                     Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
                     quis
