--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -60,21 +60,22 @@
                     quis
                     nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia
                     nostra.</p>
-                <a href="#" class="button button-alt">More Info</a>
+
             </div>
             <div class="flex-column">
                 <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis.
                     Phasellus
                     pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
                     nunc.</p>
-                <a href="#" class="button button-alt">More Info</a>
+
             </div>
             <div class="flex-column">
                 <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
                     Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
                     quis
                     nunc.</p>
-                <a href="#" class="button button-alt">More Info</a>
+                <a href="{% about.html %}" class="button button-alt">More Info</a>
+
             </div>
         </div>
     </div>
