Changed the way that the text scales above the button(s). More responsive.

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -49,6 +49,11 @@ ol, ul {
 
 p {
     line-height: 180%;
+    min-width: 100px;
+    max-width: 500px;
+    min-height: 150px;
+    max-height: 300px;
+    flex-flow: row;
 }
 
 strong {
