Realigned text back to center, added urls for about.html, and added views for about.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -67,6 +67,8 @@
                     Phasellus
                     pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
                     nunc.</p>
+                <a href="about.html" class="button button-alt">More Info</a>
+
 
             </div>
             <div class="flex-column">
@@ -74,7 +76,7 @@
                     Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
                     quis
                     nunc.</p>
-                <a href="{% about.html %}" class="button button-alt">More Info</a>
+
 
             </div>
         </div>
