--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -56,10 +56,11 @@
         </div>
         <div class="flexbox">
             <div class="flex-column">
-                <p>Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
-                    quis
-                    nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad torquent per conubia
-                    nostra.</p>
+                <h3>Our Goals</h3>
+                <p>By the year 2030, we seek to establish flourishing strategic business working partnerships for the
+                    needy. By the year 2040, we envision an empowered Africa attained through successful business
+                    engagements by the
+                    marginalized, for the marginalized.</p>
 
             </div>
             <div class="flex-column">
@@ -67,7 +68,6 @@
                     Phasellus
                     pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
                     nunc.</p>
-                <a href="about.html" class="button button-alt">More Info</a>
 
 
             </div>
@@ -76,7 +76,25 @@
                     Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
                     quis
                     nunc.</p>
+                <div class="infocard">
+                    <img class src="{% static '/webapp/images/woman-pinkshirt-foreground.jpg' %}"
+                         alt="Image not available"/>
+                    <div class="px-6 py-4">
+                        <div class="font-bold text-xl mb-2">Organizational values</div>
+                        <p class="text-gray-600 text-base">
+                            • Divine intervention for positive transformation.<br>
+                            • Empowerment through education.<br>
+                            • Timely response to human need and response to disaster.<br>
+                            • Respect to gender, disability, creed, race and any form of cultural diversity.<br>
+                            • Transparent and competent human contribution<br>
+                            • Teamwork, approachability, accessibility and dependability.<br>
+                            • High business integrity, trust truth and love.<br>
+                        </p>
+                    </div>
+                    <div class="px-6 py-4">
 
+                    </div>
+                </div>
 
             </div>
         </div>
