Altered the cricket in hand image. After further touching up, this looks like it may be our header image. Perfect.
Also, added all of the meta tags back in that were lost in the project migration to a new system.

Still trying out some css stuff to make cards for info.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,12 +4,20 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Jumping Protein</title>
-    <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
+    <meta name="title" content="Jumping Protein">
+    <meta name="description"
+          content="Jumping protein is a division of the Glorified Community Empowerment Trust. We have a vision of an economically limitless Africa. ">
+    <meta name="keywords"
+          content="Sustainability, farming, protein, hunger, climate, poverty, economy, business, partnership, education, empowerment, teamwork">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Esnath Divasoni">
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
 
@@ -46,7 +54,8 @@
 <div id="wrapper">
     <div id="three-column" class="container">
         <div class="banner">
-            <img class src="{% static '/webapp/images/woman-pinkshirt-foreground.jpg' %}" alt="Image not available"/>
+            <img class src="{% static '/webapp/images/best-insects-in-bowl.jpg' %}" height="600px" width="auto"
+                 alt="Image not available"/>
 
 
         </div>
@@ -55,7 +64,7 @@
             <span class="byline">To economically empower the African marginalised society through creativity, innovation and enterprise.</span>
         </div>
         <div class="flexbox">
-            <div class="flex-column">
+            <div class="card">
                 <h3>Our Goals</h3>
                 <p>By the year 2030, we seek to establish flourishing strategic business working partnerships for the
                     needy. By the year 2040, we envision an empowered Africa attained through successful business
@@ -63,7 +72,7 @@
                     marginalized, for the marginalized.</p>
 
             </div>
-            <div class="flex-column">
+            <div class="card">
                 <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis.
                     Phasellus
                     pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
@@ -71,35 +80,20 @@
 
 
             </div>
-            <div class="flex-column">
+            <div class="card">
                 <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
                     Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
                     quis
                     nunc.</p>
-                <div class="infocard">
-                    <img class src="{% static '/webapp/images/woman-pinkshirt-foreground.jpg' %}"
-                         alt="Image not available"/>
-                    <div class="px-6 py-4">
-                        <div class="font-bold text-xl mb-2">Organizational values</div>
-                        <p class="text-gray-600 text-base">
-                            • Divine intervention for positive transformation.<br>
-                            • Empowerment through education.<br>
-                            • Timely response to human need and response to disaster.<br>
-                            • Respect to gender, disability, creed, race and any form of cultural diversity.<br>
-                            • Transparent and competent human contribution<br>
-                            • Teamwork, approachability, accessibility and dependability.<br>
-                            • High business integrity, trust truth and love.<br>
-                        </p>
-                    </div>
-                    <div class="px-6 py-4">
-
-                    </div>
-                </div>
 
             </div>
+
+
         </div>
+
     </div>
 </div>
+
 <div id="welcome">
     <div class="container">
         <div class="title">
