Changed footer color, added some flex divs, changed the margins of various things. Still kind of playing around looking for a direction. Think I've found something general to aim for.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -52,11 +52,8 @@
     </div>
 </div>
 <div id="wrapper">
-    <div id="three-column" class="container">
+    <div id="three-column">
         <div class="banner">
-            <img class src="{% static '/webapp/images/best-insects-in-bowl.jpg' %}" height="600px" width="auto"
-                 alt="Image not available"/>
-
 
         </div>
         <div class="title">
@@ -64,7 +61,7 @@
             <span class="byline">To economically empower the African marginalised society through creativity, innovation and enterprise.</span>
         </div>
         <div class="flexbox">
-            <div class="card">
+            <div class="card1">
                 <h3>Our Goals</h3>
                 <p>By the year 2030, we seek to establish flourishing strategic business working partnerships for the
                     needy. By the year 2040, we envision an empowered Africa attained through successful business
@@ -72,7 +69,7 @@
                     marginalized, for the marginalized.</p>
 
             </div>
-            <div class="card">
+            <div class="card2">
                 <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam wisi a sem semper eleifend. Donec mattis.
                     Phasellus
                     pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis
@@ -80,7 +77,7 @@
 
 
             </div>
-            <div class="card">
+            <div class="card3">
                 <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.
                     Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris
                     quis
