--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -9,27 +9,27 @@ form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article,
 footer, header, hgroup, menu, nav {
     max-width: 100%;
     padding: 0;
-    margin: 0;
+    margin: auto;
     border: 0;
     font: inherit;
-    vertical-align: baseline;
 }
 
 body {
     margin: 0;
     padding: 0;
-    background: #111111;
+    background: #635735;
     font-family: 'Didact Gothic', sans-serif;
     font-size: 12pt;
     font-weight: 200;
-    color: #FFF;
 
 
 }
 
 .flexbox {
     display: flex;
-
+}
+.flexbox > div {
+    flex: 1;
 }
 
 
@@ -52,7 +52,22 @@ p {
     min-width: 100px;
     min-height: 150px;
     max-height: 300px;
+    text-align: center;
 
+}
+
+p.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.card1,
+.card2{
+    float: left;
+    margin-right:20px;
+}
+.card3{
+    float:right;
 }
 
 
@@ -285,7 +300,7 @@ ul.contact li a.icon-rss:before {
 
 #wrapper {
     position: relative;
-    padding: 5em 0em 7em 0em;
+    padding: 1em 0em 2em 0em;
     background: #FFF;
 
 }
@@ -296,7 +311,7 @@ ul.contact li a.icon-rss:before {
 
 #header-wrapper {
     position: relative;
-    padding: 5em 0em 7em 0em;
+    padding: 1em 0em 1em 0em;
     background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url("/static/webapp/images/crickets-in-hands2ndblur.png");
     background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/crickets-in-hands2ndblur.png");
     background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/crickets-in-hands2ndblur.png");
