--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -31,6 +31,9 @@ body {
 .flexbox > div {
     flex: 1;
 }
+.card1.card2.card3{
+    flex: 50%;
+}
 
 
 h1, h2, h3 {
@@ -311,11 +314,15 @@ ul.contact li a.icon-rss:before {
 
 #header-wrapper {
     position: relative;
-    padding: 1em 0em 1em 0em;
-    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url("/static/webapp/images/crickets-in-hands2ndblur.png");
-    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/crickets-in-hands2ndblur.png");
-    background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/crickets-in-hands2ndblur.png");
+    padding-top: 0;
+    padding-bottom: 8em;
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url("/static/webapp/images/crickets-in-hands2ndblur-cropped.png") 50% 0 no-repeat;
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/crickets-in-hands2ndblur-cropped.png") 50% 0 no-repeat;
+    background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/crickets-in-hands2ndblur-cropped.png") 50% 0 no-repeat;
     background-size: cover;
+    display: block;
+    height: auto;
+    width: 100%;
 }
 
 #header {
@@ -390,7 +397,7 @@ ul.contact li a.icon-rss:before {
 /*********************************************************************************/
 
 #banner {
-    padding-top: 10em;
+    padding-top: 1em;
     text-align: center;
 }
 
@@ -522,3 +529,23 @@ ul.contact li a.icon-rss:before {
     color: rgba(0, 0, 0, .9);
 }
 
+/* Devices smaller than 480 pixels */
+@media only screen and (max-width: 480px) {
+    .body{
+        font-size: 12px;
+    }
+    #header-wrapper{
+        height:40vw !important;
+        padding-bottom: 10em;
+    }
+}
+/* Devices smaller than 800 ox but larger than 480px */
+@media only screen and( max-width: 800px) {
+    #header-wrapper {
+        height: 30vw !important;
+        padding-bottom: 10em;
+    }
+    #header-wrapper.background {
+
+    }
+}
