Changed position of background header so that it shows up better on larger screens.

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -323,6 +323,7 @@ ul.contact li a.icon-rss:before {
     display: block;
     height: auto;
     width: 100%;
+    background-position-y: center;
 }
 
 #header {
