--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
           content="Jumping protein is a division of the Glorified Community Empowerment Trust. We have a vision of an economically limitless Africa. ">
     <meta name="keywords"
-          content="Sustainability, farming, protein, hunger, climate, poverty, economy, business, partnership, education, empowerment, teamwork">
+          content="Sustainability, farming, protein, hunger, climate, poverty, economy, business, education, empowerment, Basic needs, Development">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
@@ -109,7 +109,6 @@
     </div>
 </div>
 <div id="copyright" class="container">
-    <p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a
-            href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    <p><a href="https://thejordanmiracle.com">&copy; Miracle 2021</a>
 </div>
 </body>
