Added all of the url patterns that will be needed (except for photo gallery, which will be a new app), fixed the views, and added django compression middleware.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
                 <li><a href="{% url 'blog:post_list' %}" accesskey="2" title="">Blog</a></li>
-                <li><a href="#" title="">About Us</a></li>
+                <li><a href="about.html" title="">About Us</a></li>
                 <li><a href="#" title="">Contact Us</a></li>
             </ul>
         </div>
