--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -35,8 +35,8 @@
             <ul>
                 <li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
                 <li><a href="{% url 'blog:post_list' %}" accesskey="2" title="">Blog</a></li>
-                <li><a href="about.html" title="">About Us</a></li>
-                <li><a href="#" title="">Contact Us</a></li>
+                <li><a href="{% url 'about' %}" title="">About Us</a></li>
+                <li><a href="#" title="">Gallery</a></li>
             </ul>
         </div>
     </div>
@@ -46,8 +46,7 @@
             <span class="byline">A division of the Glorified Community Empowerment Trust</span>
         </div>
         <ul class="actions">
-            <li><a href="#" class="button">Etiam posuere</a></li>
-            <li><a href="#" class="button">Pulvinar mollis</a></li>
+            <li><a href="#" class="button">Contact Us</a></li>
         </ul>
     </div>
 </div>
